// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes Validate routes: * 1`] = `
{
  "breadcrumb": "route.page404",
  "component": "@/pages/landing/errors/404",
  "path": "*",
}
`;

exports[`Routes Validate routes: / 1`] = `
{
  "exact": true,
  "path": "/",
  "redirect": "/flipGame/",
}
`;

exports[`Routes Validate routes: / 2`] = `
{
  "component": "@/layouts/landing",
  "exact": false,
  "path": "/",
  "routes": [
    {
      "exact": true,
      "path": "/",
      "redirect": "/flipGame/",
    },
    {
      "component": "@/pages/cards",
      "exact": true,
      "path": "/flipGame/",
    },
    {
      "breadcrumb": "route.pageWarning",
      "component": "@/pages/landing/errors/warning",
      "path": "/errors/warning",
    },
    {
      "breadcrumb": "route.page500",
      "component": "@/pages/landing/errors/500",
      "path": "/errors/500",
    },
    {
      "breadcrumb": "route.page403",
      "component": "@/pages/landing/errors/403",
      "path": "/errors/403",
    },
    {
      "breadcrumb": "route.page404",
      "component": "@/pages/landing/errors/404",
      "path": "/errors/404",
    },
    {
      "breadcrumb": "route.page404",
      "component": "@/pages/landing/errors/404",
      "path": "*",
    },
  ],
}
`;

exports[`Routes Validate routes: /errors/403 1`] = `
{
  "breadcrumb": "route.page403",
  "component": "@/pages/landing/errors/403",
  "path": "/errors/403",
}
`;

exports[`Routes Validate routes: /errors/404 1`] = `
{
  "breadcrumb": "route.page404",
  "component": "@/pages/landing/errors/404",
  "path": "/errors/404",
}
`;

exports[`Routes Validate routes: /errors/500 1`] = `
{
  "breadcrumb": "route.page500",
  "component": "@/pages/landing/errors/500",
  "path": "/errors/500",
}
`;

exports[`Routes Validate routes: /errors/warning 1`] = `
{
  "breadcrumb": "route.pageWarning",
  "component": "@/pages/landing/errors/warning",
  "path": "/errors/warning",
}
`;

exports[`Routes Validate routes: /flipGame/ 1`] = `
{
  "component": "@/pages/cards",
  "exact": true,
  "path": "/flipGame/",
}
`;
